@@ -78,6 +78,7 @@ Bugs fixed
   module members without :impoprted-members: option
 * #6889: autodoc: Trailing comma in ``:members::`` option causes cryptic warning
 * #7055: linkcheck: redirect is treated as an error
+* #7090: std domain: Can't assign numfig-numbers for custom container nodes
 
 Testing
 --------
